Added trends interior map

--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,9 @@
 				<div class="container">
 					<div class="row">
 						<div class="map-wrap" style="width:100%; height: 445px;">
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3768.1934332906403!2d73.01859657432048!3d19.186751948488023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7bf1bd62de6af%3A0x4e3c9456021dcef0!2sKutchi%20ITI%20Computer%20Institute!5e0!3m2!1sen!2sin!4v1705682620851!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+					
+
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3765.806978664428!2d73.1508592!3d19.290758399999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7972dcdf27079%3A0x5e60fc7881dac801!2sTrends%20Interiors!5e0!3m2!1sen!2sin!4v1706234586479!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 						</div>
 						<div class="col-lg-4 d-flex flex-column address-wrap">
 							<div class="single-contact-address d-flex flex-row">
