Some changes in contact page

--- a/contact.html
+++ b/contact.html
@@ -141,7 +141,7 @@
 								</div>
 								<div class="contact-details">
 									<h5>+91 9136624251</h5>
-									<p>open everyday</p>
+									<p>Monday to Saturday, 9 am to 6 pm</p>
 								</div>
 							</div>
 							<div class="single-contact-address d-flex flex-row">
