edited about page

--- a/about.html
+++ b/about.html
@@ -153,8 +153,8 @@
 								<span>We are here to listen from you deliver exellence</span>
 							</p> -->
 							<p>
-								<li>At Trends Interiors Interiors, we believe in transforming spaces into masterpieces. Our passion lies in creating designs that reflect your personality and elevate your lifestyle.</li>
-									<p style="padding-left: 30px;">Immerse yourself in the essence of Trends Interiors's Interiors, where we are dedicated to crafting spaces that not only look stunning but also resonate with your unique identity.</p>
+								<li>At Trends Interiors, we believe in transforming spaces into masterpieces. Our passion lies in creating designs that reflect your personality and elevate your lifestyle.</li>
+									<p style="padding-left: 30px;">Immerse yourself in the essence of Trends Interiors, where we are dedicated to crafting spaces that not only look stunning but also resonate with your unique identity.</p>
 								<br>
 								<li>With a keen eye for aesthetics and a commitment to functionality, we turn dreams into reality, one space at a time.</li>
 									<p style="padding-left: 30px;">Our design approach marries beauty with purpose, ensuring that each project not only captivates the senses but also enhances the functionality of your living or working environment.</p>
