--- a/home-interior.html
+++ b/home-interior.html
@@ -15,7 +15,7 @@
     <meta charset="UTF-8">
     <!-- Site Title -->
     <title>Home Interiors</title>
-
+    <link rel="icon" type="image/x-icon" href="/logo/favicon/NocG6I1A.ico">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <!--
@@ -53,9 +53,9 @@
           <div class="container main-menu">
               <div class="row align-items-center justify-content-between d-flex">
                   <!-- ----------------LOGO-------------------- -->
-                <div id="logo">
-                  <a href="index.html"><img src="logo/restored-image.png" height="80px" id="logoimg"></a>
-                </div>
+                  <div id="logo">
+                    <a href="index.html"><img src="logo/finallogo2.png" id="logoimg"></a>
+                  </div>
 
                 <nav id="nav-menu-container">
                   <ul class="nav-menu">
