Configured EmailJS to trendsinteriors.co.in mail

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 
 			<script type="text/javascript">
 				(function(){
-					emailjs.init("w5fO3YQVRXN1_gRDu");
+					emailjs.init("y4OJOvgTqbsHzxbjK");
 				})();
 			</script>
 
