--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 						<div class="col-lg-8">
 							<div class="single-gallery">
 								<div class="content">
-								    <a href="" target="_blank">
+								    <a target="_blank">
 								      <div class="content-overlay"></div>
 								  		 <img class="content-image img-fluid d-block mx-auto" src="img/showrooms/optical/op1.jpg" alt="">
 								      <div class="content-details fadeIn-bottom">
@@ -175,7 +175,7 @@
 						<div class="col-lg-4">
 							<div class="single-gallery">
 								<div class="content">
-								    <a href="" target="_blank">
+								    <a  target="_blank">
 								      <div class="content-overlay"></div>
 								  		 <img class="content-image img-fluid d-block mx-auto" src="img/showrooms/optical/op4.png" alt="">
 								      <div class="content-details fadeIn-bottom">
@@ -189,7 +189,7 @@
 						<div class="col-lg-4">
 							<div class="single-gallery">
 								<div class="content">
-								    <a href="" target="_blank">
+								    <a  target="_blank">
 								      <div class="content-overlay"></div>
 								  		 <img class="content-image img-fluid d-block mx-auto" src="img/showrooms/optical/op5.png" alt="">
 								      <div class="content-details fadeIn-bottom">
@@ -203,7 +203,7 @@
 						<div class="col-lg-8">
 							<div class="single-gallery">
 								<div class="content">
-								    <a href="" target="_blank">
+								    <a target="_blank">
 								      <div class="content-overlay"></div>
 								  		 <img class="content-image img-fluid d-block mx-auto" src="img/showrooms/optical/op2.jpg" alt="">
 								      <div class="content-details fadeIn-bottom">
