--- a/home-interior.html
+++ b/home-interior.html
@@ -37,14 +37,14 @@
                     <div class="row">
                         <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
                             <a href="tel:+953 012 3654 896">+91 91366 24251</a>
-                            <a href="mailto:support@colorlib.com">designeraziz.v@gmail.com</a>					  
+                            <a href="mailto:support@colorlib.com">info@trendsinteriors.co.in</a>					  
                         </div>
                         <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
                             <ul>
                               <li><a href="#"><i class='bx bxl-facebook'></i></a></li>
                               <li><a href="#"><i class='bx bxl-twitter' ></i></a></li>
                               <li><a href="#"><i class='bx bxl-instagram' ></i></a></li>
-                              <li><a href="https://wa.me/+917506984906" target="_blank"><i class='bx bxl-whatsapp'></i></a></li>
+                              <li><a href="https://wa.me/+919136624251" target="_blank"><i class='bx bxl-whatsapp'></i></a></li>
                             </ul>			
                         </div>
                     </div>			  					
@@ -267,7 +267,7 @@
 									<a href="#"><i class='bx bxl-facebook'></i></i></a>
 									<a href="#"><i class='bx bxl-twitter' ></i></a>
 									<a href="#"><i class='bx bxl-instagram' ></i></a>
-									<a href="https://wa.me/+919987730910" target="_blank"><i class='bx bxl-whatsapp'></i></a>
+									<a href="https://wa.me/+919136624251" target="_blank"><i class='bx bxl-whatsapp'></i></a>
 								</div>
 							</div>
 						</div>							
