--- a/contact.html
+++ b/contact.html
@@ -148,7 +148,7 @@
 									<span class="lnr lnr-envelope"></span>
 								</div>
 								<div class="contact-details">
-									<h5>designeraziz.v@gmail.com</h5>
+									<h5>info@trendsinteriors.co.in</h5>
 									<p>Send us your query anytime!</p>
 								</div>
 							</div>														
