--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			    	<div class="row align-items-center justify-content-between d-flex">
 						<!-- ----------------LOGO-------------------- -->
 				      <div id="logo">
-				        <a href="index.html"><img src="logo/finallogo2.png" id="logoimg"></a>
+				        <a href="index.html"><img src="logo/FINAL3.png" id="logoimg"></a>
 				      </div>
 
 				      <nav id="nav-menu-container">
